Binner/Binner.Web/ClientApp/src/custom.css
/* ... */
.Toastify { width: 100%; }

.Toastify .Toastify__toast-container:has(#wide) {
    --toastify-toast-width: 70% !important;
}

.Toastify__toast-container.Toastify__toast-container--top-center {
    top: 0;
    left: 50%;
    transform: translateX(-50%);

}

.Toastify__toast {
    /* gives more room to the top header controls */
    margin-bottom: 0.5em;
    /* add spacing for close icon */
    padding-right: 40px;
}

div:has(.popup),div:has(.Toastify>*) {
    -webkit-filter: none !important;
    filter: none !important;
}

.ui.loader.inline.static {
  position: relative;
}

.ui.loader.inline.static:after {
  border-color: #767676 transparent transparent !important;
}

.error {
    color: #000;
    font-weight: 400;
}

.error b {
    color: #c00;
    font-weight: 700;
}

.error.small {
    font-size: 0.9em;
}

.scrollable {
  overflow-x: scroll;
}

.expandable-table {
  overflow: scroll;
}

.expandable-cell {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.width-50 {
  min-width: 50px;
  max-width: 75px;
}

.width-100 {
  min-width: 100px;
  max-width: 200px;
}

.width-150 {
  min-width: 150px;
  max-width: 200px;
}

.width-200 {
  min-width: 200px;
  max-width: 250px;
}

.width-250 {
  min-width: 250px;
  max-width: 300px;
}

.width-300 {
  min-width: 300px;
  max-width: 400px;
}

.part-reference {
  font-weight: 500;
  color: #1b59dd;
}

.suggested-part {
	font-size: 0.8em;
	height: 19px;
}

.suggested-part span {
	font-style: italic;
}

.suggested-part button {
	font-weight: 500;
	font-style: normal;
}

.disabled>* {
    opacity: 0.5;
}

h1.maker::after {
    content: 'MAKER';
    background-color:rgb(0, 100, 230);
    color: #fff;
    font-size: 0.5em;
    vertical-align: super;
    text-decoration: none !important;
    padding: 1px 2px;
    letter-spacing: 0.2em;
    text-align: center;
    margin-left: 2px;
}

h1.pro::after {
    content: 'PRO';
    background-color:rgb(0, 100, 230);
    color: #fff;
    font-size: 0.5em;
    vertical-align: super;
    text-decoration: none !important;
    padding: 1px 2px;
    letter-spacing: 0.2em;
    text-align: center;
    margin-left: 2px;
}

ul.errors {
  list-style-type: none;
  padding: 0;
  margin-left: 5px;
}

ul.errors li {
  color: #999;
}

ul.errors li:before {
  content: "\f06a";
  font-family: Icons;
  font-style: normal;
  font-weight: 400;
  padding-right: 10px;
}

ul.errors li.error {
  color: #c00;
}

ul.errors li.error:before {
  content: "\f071";
  font-family: Icons;
  font-style: normal;
  font-weight: 400;
  padding-right: 10px;
}

